--- a/Gra tekstowa v2.csproj
+++ b/Gra tekstowa v2.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Gra_tekstowa_v2</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
